# entra-identity-lifecycle-governance-lab

./: .gitignore  ENVIRONMENT.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
architecture/: evidence-boundaries.md  identity-architecture.md
automation/: __init__.py  controls.py  evidence_site.py  lab.py  quality.py
compliance/: control-mapping.md
config/: applications.json  governance.json  policy.json
config/conditional-access/: safe.json  unsafe.json
data/: hr.json
demo/: README.md  reset-demo.ps1  run-demo.ps1  setup-demo.ps1  start-demo.ps1  teardown-demo.ps1
demo/expected-results/: jasmine-mover.json
demo/scenarios/: jasmine-mover-failure.json
demo/video-script/: common-demo-failures.md  recruiter-demo.md  shot-list.md  talking-points.md  technical-demo.md
interview/: portfolio-guide.md
investigations/: expired-contractor-investigation.md
platform/entra/: Connect-EntraLab.ps1  Invoke-AuthorizedEntraLab.ps1  README.md
reporting/: executive-summary.md  laymans-guide.md  reproducibility-report.md
tests/: test_controls.py  test_lab.py
