[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "northstar-entra-lab"
version = "1.0.0"
requires-python = ">=3.11,<3.14"
dependencies = []

[project.optional-dependencies]
dev = ["pytest==8.3.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["automation"]
